kubernetes/main/apps/network/external-services/pihole/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-ui
  namespace: network
spec:
  ports:
    - protocol: TCP
      port: 80
---
apiVersion: v1
kind: Endpoints
metadata:
  name: pihole
  namespace: network
subsets:
  - addresses:
      - ip: 10.1.100.53
    ports:
      - port: 80
