kubernetes/main/apps/network/external-services/pihole/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole
  namespace: network
  annotations:
  nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
  # nginx-ingress.kubernetes.io/rewrite-target: ^/admin(.*)$ /$2
  # # nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: internal
  rules:
    - host: &host pihole.robsonhome.cloud
      http:
        paths:
          - path: /admin
            pathType: Prefix
            backend:
              service:
                name: pihole-ui
                port:
                  number: 80
  tls:
    - hosts:
        - *host
